--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 streamlit
+langchain
+langchain-community
+langchain-google-genai
+faiss-cpu
 pypdf2
-google-generativeai
+python-dotenv
+pdf2image
+pytesseract
