--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 streamlit
+langchain
+langchain-community
+langchain-core
+langchain-google-genai
+langchain-text-splitters
+faiss-cpu
 pypdf2
-google-generativeai
+python-dotenv
+pdf2image
+pytesseract
