--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 streamlit
+langchain==0.1.12
+langchain-community==0.0.28
+langchain-core==0.1.32
+langchain-google-genai==0.0.11
+langchain-text-splitters==0.0.1
+faiss-cpu
 pypdf2
+python-dotenv
